@@ -65,6 +65,7 @@ export(get_nwparam)
 export(get_nwstats)
 export(get_prev.icm)
 export(get_prev.net)
+export(get_sims)
 export(get_transmat)
 export(icm)
 export(idmode)
